foundations/block-and-inline/01-margin-and-padding-1/style.css
body {
  max-width: 600px;
  margin: 0 auto;
}

.one {
  background: pink;
  border: 3px solid blue;
  /* CHANGE ME */
  padding: 1em;
  margin: 1em;
}

.two {
  background: lightblue;
  border: 3px solid purple;
  /* CHANGE ME */
  margin-bottom: 50px;
}

.three {
  background: peachpuff;
  border: 3px solid brown;
  width: 200px;
  /* CHANGE ME */
  padding: 1.5em;
  margin-left: 300px;
}

